--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
     </header>
 
     <!-- main Section -->
-    <section class="main">
-        <div class="container">
-            <div class="main-content">
-                <h1>Expertos en Mantenimiento y Reparación de Vehículos</h1>
-                <p>En AutoPro, nos dedicamos a mantener tu vehículo en las mejores condiciones con servicio de calidad y
-                    técnicos especializados.</p>
-                <div class="main-buttons">
-                    <a href="#contact" class="btn">Agendar Cita</a>
-                    <a href="#services" class="btn btn-secondary">Nuestros Servicios</a>
-                </div>
+    <section id="home" class="main">
+        <div class="main-bg"></div>
+        <div class="main-overlay"></div>
+        
+        <div class="particles" id="particles"></div>
+        
+        <div class="main-content">
+            <h1 class="main-title" id="main-title"></h1>
+            <h2 class="main-subtitle">Soluciones Automotrices de Calidad</h2>
+            <p class="main-description">Con más de 15 años de experiencia, ofrecemos servicios de mecánica de alta calidad con tecnología de punta y un equipo de técnicos certificados.</p>
+            <div class="main-buttons">
+                <a href="#booking" class="btn btn-primary">Agendar Cita</a>
+                <a href="#services" class="btn btn-secondary">Conocer Más</a>
             </div>
         </div>
     </section>
+
 
     <!-- About Section -->
     <section id="about" class="section about">
